[tool.poetry]
name = "sql-athame"
version = "0.4.0-alpha-1"
description = "Python tool for slicing and dicing SQL"
authors = ["Brian Downing <bdowning@lavos.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bdowning/sql-athame"
repository = "https://github.com/bdowning/sql-athame"

[tool.poetry.extras]
asyncpg = ["asyncpg"]

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = { version = "*", optional = true }
typing-extensions = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
mypy = "*"
flake8 = "*"
ipython = "*"
pytest-cov = "*"
bump2version = "*"
asyncpg = "*"
pytest-asyncio = "*"
grip = "*"
SQLAlchemy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
