[project]
authors = [
    {name = "Brian Downing", email = "bdowning@lavos.net"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.9"
dependencies = [
    "typing-extensions",
]
name = "sql-athame"
version = "0.4.0-alpha-12"
description = "Python tool for slicing and dicing SQL"
readme = "README.md"

[project.urls]
homepage = "https://github.com/bdowning/sql-athame"
repository = "https://github.com/bdowning/sql-athame"

[project.optional-dependencies]
asyncpg = [
    "asyncpg",
]

[dependency-groups]
dev = [
    "SQLAlchemy",
    "asyncpg",
    "bump2version",
    "ipython",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "DTZ",
    "E",
    "F",
    "I",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PIE",
    "PT",
    "RET",
    "RUF",
    "SLOT",
    "UP",
]
flake8-comprehensions.allow-dict-calls-with-keyword-arguments = true
ignore = [
    "E501",    # line too long
    "RET505",  # Unnecessary `else` after `return` statement
    "RET506",  # Unnecessary `else` after `raise` statement
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # wildcard import
]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov",
    "--cov-report", "xml:results/pytest/coverage.xml",
    "--cov-report", "html:results/pytest/cov_html",
    "--cov-report", "term-missing",
    "--junitxml=results/pytest/results.xml",
    "--durations=5",
]
junit_family = "legacy"
asyncio_mode = "auto"

[tool.coverage]
run.include = [
    "sql_athame/**/*.py",
    "tests/**/*.py",
]
report.precision = 2

[tool.mypy]
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "asyncpg",
]
ignore_missing_imports = true
